.provarCaches/00D5h000009Q6XQEA0/objects/provar__Issue_Link__c.object
<CustomObject>
    <fields>
        <fullName>provar__Inward_Relationship__c</fullName>
        <formula>provar__Link_Type__r.provar__Inward__c</formula>
        <label>Inward Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Last_Sync_Activity__c</fullName>
        <label>Last Sync Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>provar__Link_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Link Type</label>
        <referenceTo>provar__Issue_Link_Type__c</referenceTo>
        <relationshipLabel>Issue Links</relationshipLabel>
        <relationshipName>Issue_Links</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>provar__Outward_Relationship__c</fullName>
        <formula>provar__Link_Type__r.provar__Outward__c</formula>
        <label>Outward Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provar__Source_Issue__c</fullName>
        <label>Source Issue</label>
        <referenceTo>provar__Issue__c</referenceTo>
        <relationshipLabel>Linked Issues (Source)</relationshipLabel>
        <relationshipName>Issue_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>provar__Sync_Information__c</fullName>
        <label>Sync Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>provar__Sync_Status__c</fullName>
        <label>Sync Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Synced</fullName>
                    <default>true</default>
                    <label>Not Synced</label>
                </value>
                <value>
                    <fullName>Synced</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>provar__Target_Issue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Target Issue</label>
        <referenceTo>provar__Issue__c</referenceTo>
        <relationshipLabel>Linked Issues (Target)</relationshipLabel>
        <relationshipName>Issue_Links1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Issue Link</label>
    <nameField>
        <displayFormat>IL-{000000}</displayFormat>
        <label>Issue Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>